tests/ui/inference/need_type_info/issue-113264-incorrect-impl-trait-in-path-suggestion.rs
trait T {}

struct S {}

impl S {
    fn owo(&self, _: Option<&impl T>) {}
}

fn main() {
    (S {}).owo(None)
    //~^ ERROR type annotations needed
}
